--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,13 +8,23 @@ set -g history-limit 50000
 # Tmux mouse mode
 set-option -g mouse on
 
+## Enable mouse with 'm' and disable with 'M'
+unbind m
+bind m \
+ set -g mouse on \;\
+ display 'Mouse: ON'
+unbind M
+  bind M \
+  set -g mouse off \;\
+  display 'Mouse: OFF'
+
 # THEME
 set -g status-bg colour235
 set -g status-fg yellow
-set-option -g status-attr dim
-set-window-option -g window-status-current-fg brightred #orange
-set-window-option -g window-status-current-bg colour236
-set-window-option -g window-status-current-attr bright
+#set-option -g status-attr dim
+#set-window-option -g window-status-current-fg brightred #orange
+#set-window-option -g window-status-current-bg colour236
+#set-window-option -g window-status-current-attr bright
 
 set -g status-interval 60
 set -sg escape-time 1000
@@ -28,8 +38,8 @@ set -g status-left "#[fg=yellow]#(ifconfig | grep 'inet ' | grep -v 127.0.0.1 | 
 set -g status-right-length 60
 set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u | awk '{print $4}')::"
 # set pane colors - hilight the active pane
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+#set-option -g pane-border-fg colour235 #base02
+#set-option -g pane-active-border-fg colour240 #base01
 
 
 # use PREFIX | to split window horizontally and PREFIX - to split vertically
@@ -61,5 +71,5 @@ bind-key -n C-S-Right resize-pane -R 10
 #    display-message "Windows reordered..."
 
 ## pane border and colors
-set-option -g pane-active-border-fg yellow
-set-option -g pane-border-fg white
+#set-option -g pane-active-border-fg yellow
+#set-option -g pane-border-fg white
